01-02-2018/Lab-1
>>> print("Hello World!!!")
Hello World!!!
>>> print('Hello World!!!')
Hello World!!!
>>> print('''Hello World!!!''')
Hello World!!!
>>> print("""Hello World!!!""")
Hello World!!!
>>> 
>>> print('It's a bit challenge')
  File "<stdin>", line 1
    print('It's a bit challenge')
              ^
SyntaxError: invalid syntax
>>> 
>>> print("It's a bit challenge")
It's a bit challenge
>>> 
>>> print('It's a bit challenge for...
  File "<stdin>", line 1
    print('It's a bit challenge for...
              ^
SyntaxError: invalid syntax
>>> 
>>> print("It's a bit challenge for...
  File "<stdin>", line 1
    print("It's a bit challenge for...
                                     ^
SyntaxError: EOL while scanning string literal
>>> 
>>> print('''It's a bit challenge for...
... DD's ...
... let's see some more concepts!!!...''')
It's a bit challenge for...
DD's ...
let's see some more concepts!!!...
>>> 
>>> print('''It's a bit challenge for...
... DD's ...
... let's see some more concepts!!!...
... ..."hello world!!!"''')
It's a bit challenge for...
DD's ...
let's see some more concepts!!!...
..."hello world!!!"
>>> 
